fixed spacing problem with the header

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -413,6 +413,7 @@ footer {
     font-family: $proxima-regular;
     line-height: 1.5;
     color: #899199;
+    margin: 0;
     @media screen and (max-width: 768px) {
       padding: 24px 0;
     }
